--- a/css/states.css
+++ b/css/states.css
@@ -1,4 +1,9 @@
-/* ELEMENT STATES STYLES */
+/* ELEMENT STATES */
+
+/* FOR: states for all elements and classes */
+/* FOR EXAMPLE: header.fixed, form.active, section.hidden, button:hover, a:hover, etc... */
+/* NOT FOR: styles for elements or typography */
+/* NOT FOR EXAMPLE:  p, h1, li, td, label, section, figure, form, button, etc... */
 
 /* header headroom */
 .header .headroom.headroom--unpinned {
