react scroll wip

--- a/css/animations.css
+++ b/css/animations.css
@@ -4,4 +4,4 @@
 /* FOR EXAMPLE: animated, fade-in, fade-out, @keyframes animate, @keyframes fadeIn, @keyframes fadeOut*/
 /* NOT FOR: global element styles or element states */
 /* NOT FOR EXAMPLE: section, figure, section.animated.fade-in, button:hover, a:hover */
-
+/* WARNING: CSS animations are better for animations that you don’t want to stop or adjust after they are triggered */
