--- a/containers/footer/index.css
+++ b/containers/footer/index.css
@@ -5,12 +5,17 @@
 	bottom: 0;
 	left: 0;
 	width: 100%;
-	height: 50vh;
+	height: 100vh;
 	z-index: 1;
-	background-color: #cf3c44;
+	background-color: #3f324d;
 	align-items: center;
 	justify-content: center;
 	text-align: center;
+}
+
+.footer .title {
+	color: #ff995e;
+	transform: rotate(-3deg);
 }
 
 /* copyright figure */
@@ -25,16 +30,7 @@
 	margin: 0;
 	color: #fff;
 	font-size: .8rem;
-	text-align: left;
 	line-height: 1;
-}
-
-/* copyright message icon */
-.footer .copyright.figure .message .icon {
-	vertical-align: bottom !important;
-	color: #93b556;
-	font-size: 0.88665rem;
-	animation: heartbeat 1s infinite;
 }
 
 /* copyright message link */
