--- a/src/layouts/index.css
+++ b/src/layouts/index.css
@@ -16,8 +16,13 @@ body {
   display: flex;
   min-height: 100vh;
   flex-direction: column;
+  margin: 0 auto;
 }
 
 .layout .main.content {
   flex: 1;
+  z-index: 1;
+  margin-bottom: 50vh;
+  background-color: #fff;
+  box-shadow: 0 0 0.25em 0 rgba(0, 0, 0, 0.25);
 }
