--- a/src/containers/header/index.css
+++ b/src/containers/header/index.css
@@ -2,6 +2,31 @@
   z-index: 2;
 }
 
+.header .headroom-wrapper {
+  position: relative;
+  width: auto;
+  height: auto !important;
+  z-index: 5;
+}
+
+.header .headroom-wrapper .headroom.headroom--unpinned {
+  display: none;
+  position: fixed;
+  bottom: 1.75em;
+  left: 0;
+  width: 100%;
+  padding: 0;
+}
+
+.header .headroom-wrapper .headroom.headroom--pinned,
+.header .headroom-wrapper .headroom.headroom--unfixed {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  padding: 0;
+}
+
 .header .link {
   position: absolute;
   top: 1em;
@@ -17,4 +42,14 @@
   padding: 0.25em;
   border-radius: 50%;
   background-color: #fff;
+}
+
+.navigating .header .headroom-wrapper .headroom.headroom--unpinned,
+.navigating .header .headroom-wrapper .headroom.headroom--pinned,
+.navigating .header .headroom-wrapper .headroom.headroom--unfixed  {
+  display: block;
+}
+
+.navigating .header .headroom-wrapper .headroom.headroom--unpinned .details.button {
+  display: none;
 }
