updates to hero

--- a/src/containers/hero/index.css
+++ b/src/containers/hero/index.css
@@ -40,7 +40,7 @@
 
 .post.hero.section .hero.figure .title .category {
   position: absolute;
-  top: -3.25em;
+  bottom: -0.9em;
   right: 0;
   padding: 0.5em;
   border: 0.15em solid #e66500;
