--- a/src/components/read_next/index.css
+++ b/src/components/read_next/index.css
@@ -12,18 +12,21 @@
   text-decoration: none;
   text-align: center;
   line-height: 1;
+  transform: scale(1.15);
   transition: all 250ms ease;
 }
 
 .read.next.figure .link:hover {
-  transform: scale(1.15);
+  transform: scale(1.5);
 }
 
 .read.next.figure .link.previous {
+  filter: blur(0.15em);
   transform: scale(0.5);
 }
 
 .read.next.figure .link.previous:hover {
+  filter: blur(0);
   transform: scale(0.75);
 }
 
