more style updates

--- a/src/components/read_next/index.css
+++ b/src/components/read_next/index.css
@@ -5,29 +5,31 @@
 .read.next.figure .link {
   display: block;
   position: relative;
-  margin-top: 0.5em;
+  max-width: 16em;
+  margin: 0 auto;
   font-family: 'Ubuntu','Open Sans','Helvetica Neue','Helvetica','Arial','sans-serif';
   font-weight: bold;
   text-transform: uppercase;
   text-decoration: none;
   text-align: center;
   line-height: 1;
-  transform: scale(1.15);
+  transform: scale(1.25);
   transition: all 250ms ease;
 }
 
 .read.next.figure .link:hover {
-  transform: scale(1.5);
+  transform: scale(2);
 }
 
 .read.next.figure .link.previous {
+  margin-bottom: 0.5em;
   filter: blur(0.15em);
-  transform: scale(0.5);
+  transform: scale(0.25);
 }
 
 .read.next.figure .link.previous:hover {
   filter: blur(0);
-  transform: scale(0.75);
+  transform: scale(0.5);
 }
 
 .read.next.figure .link .label {
