--- a/src/components/menu/index.css
+++ b/src/components/menu/index.css
@@ -150,5 +150,5 @@
 .menu.figure .navigation .link.active,
 .menu.figure .navigation .link:hover {
   background-color: #e66500;
-  color: #fff;
+  color: #eee6ff;
 }
